force-app/main/default/objects/Recognition_Profile__c/Recognition_Profile__c.object-meta.xml
<CustomObject>
    <label>Recognition Profile</label>
    <nameField>
        <displayFormat>PROF-{0000}</displayFormat>
        <label>Recognition Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recognition Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>