force-app/main/default/objects/Recognition_Profile__c/fields/Accrued_Points__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Points__c</fullName>
    <description>no longer a M-D</description>
    <label>Accrued Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>