force-app/main/default/objects/Recognition_Profile__c/fields/API_Badges__c.field-meta.xml
<CustomField>
    <fullName>API_Badges__c</fullName>
    <label>API Badges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>