force-app/main/default/objects/Recognition_Profile__c/fields/Badges_Received__c.field-meta.xml
<CustomField>
    <fullName>Badges_Received__c</fullName>
    <description>COUNT</description>
    <label>Badges Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>