force-app/main/default/objects/Recognition_Profile__c/fields/Last_Flow_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Flow_Run_Date__c</fullName>
    <label>Last Flow Run Date</label>
    <type>DateTime</type>
</CustomField>