force-app/main/default/objects/Recognition_Profile__c/fields/Lifetime_Badges_Received__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Badges_Received__c</fullName>
    <description>Count (not unique) of tally with how many they&apos;ve received</description>
    <inlineHelpText>How many of all of these have you received</inlineHelpText>
    <label>Lifetime Badges Received</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>