force-app/main/default/objects/Recognition_Profile__c/fields/recog_API_Kudos_Given__c.field-meta.xml
<CustomField>
    <fullName>recog_API_Kudos_Given__c</fullName>
    <label>API Kudos Given</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>