force-app/main/default/objects/Recognition_Profile__c/fields/Slack_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_ID__c</fullName>
    <label>Slack User ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>