force-app/main/default/objects/Recognition_Profile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Slack_User_ID__c</columns>
    <columns>Accrued_Points__c</columns>
    <columns>Badges_Received__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>